--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     </div>
     <div class="outputs">
         <div class="searchblock">
-            <!-- <input type="text" id="search" placeholder="search">
+             <input type="text" id="search" placeholder="search">
             <div class="bnt">
                 <button type="button" class="btn btn-outline-primary" id="title">search by title</button>
                 <button type="button" class="btn btn-outline-primary" id="search">search by category</button>
-            </div> -->
+            </div> 
             <table>
                 <tr>
                     <th>id</th>
