--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <input onkeyup="getTotal()" ype="number" id="texes" placeholder="texes">
             <input onkeyup="getTotal()" type="number" id="ads" placeholder="ads">
             <input onkeyup="getTotal()" type="number" id="discount" placeholder="discount">
+            <small id="totel">totel</small>
         </div>
         <input type="number" id="count" placeholder="count" >
         <input type="text" id="category" placeholder="category">
@@ -28,11 +29,11 @@
     </div>
     <div class="outputs">
         <div class="searchblock">
-             <input type="text" id="search" placeholder="search">
+              <input type="text" id="search" placeholder="search">
             <div class="bnt">
                 <button type="button" class="btn btn-outline-primary" id="title">search by title</button>
                 <button type="button" class="btn btn-outline-primary" id="search">search by category</button>
-            </div> 
+            </div>
             <table>
                 <tr>
                     <th>id</th>
